--- a/src/layouts/service.html
+++ b/src/layouts/service.html
@@ -90,15 +90,316 @@
                                          src="../temp/products/product-a@1x.jpg"
                                          width="396"
                                          height="456"
+                                         alt=""
                                     >
                                 </div>
                                 <div class="product__color-overlay"></div>
                                 <div class="product__overlay">
                                     <h2 class="product__heading">
-                                        Газо-поршневые установки&nbsp;ГПУ
+                                        Дизель электро<br> станции&nbsp;ДЭС
                                     </h2>
                                     <div class="product__description">
-                                        Газопоршневые установки являются самостоятельным электрогенерирующим устройством, состоящим из смонтированного в блок-модуле специальной конструкции газопоршневого двигателя и системы
+                                        Блок-модуль имеет конструкцию, предназначенную для размещения в нем автономных источников электроснабжения с использованием дизельных генераторов.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Газо-поршневые<br> установки&nbsp;ГПУ
+                                    </h2>
+                                    <div class="product__description">
+                                        Газопоршневые установки являются самостоятельным электрогенерирующим устройством, состоящим из смонтированного в блок-модуле специальной конструкции газопоршневого двигателя.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Котельные на различном виде топлива
+                                    </h2>
+                                    <div class="product__description">
+                                        Предназначены для теплоснабжения жилых, общественных и промышленных объектов.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Дизель электро<br> станции&nbsp;ДЭС
+                                    </h2>
+                                    <div class="product__description">
+                                        Блок-модуль имеет конструкцию, предназначенную для размещения в нем автономных источников электроснабжения с использованием дизельных генераторов.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Газо-поршневые<br> установки&nbsp;ГПУ
+                                    </h2>
+                                    <div class="product__description">
+                                        Газопоршневые установки являются самостоятельным электрогенерирующим устройством, состоящим из смонтированного в блок-модуле специальной конструкции газопоршневого двигателя.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Котельные на различном виде топлива
+                                    </h2>
+                                    <div class="product__description">
+                                        Предназначены для теплоснабжения жилых, общественных и промышленных объектов.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Дизель электро<br> станции&nbsp;ДЭС
+                                    </h2>
+                                    <div class="product__description">
+                                        Блок-модуль имеет конструкцию, предназначенную для размещения в нем автономных источников электроснабжения с использованием дизельных генераторов.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Газо-поршневые<br> установки&nbsp;ГПУ
+                                    </h2>
+                                    <div class="product__description">
+                                        Газопоршневые установки являются самостоятельным электрогенерирующим устройством, состоящим из смонтированного в блок-модуле специальной конструкции газопоршневого двигателя.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Котельные на различном виде топлива
+                                    </h2>
+                                    <div class="product__description">
+                                        Предназначены для теплоснабжения жилых, общественных и промышленных объектов.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Дизель электро<br> станции&nbsp;ДЭС
+                                    </h2>
+                                    <div class="product__description">
+                                        Блок-модуль имеет конструкцию, предназначенную для размещения в нем автономных источников электроснабжения с использованием дизельных генераторов.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Газо-поршневые<br> установки&nbsp;ГПУ
+                                    </h2>
+                                    <div class="product__description">
+                                        Газопоршневые установки являются самостоятельным электрогенерирующим устройством, состоящим из смонтированного в блок-модуле специальной конструкции газопоршневого двигателя.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Котельные на различном виде топлива
+                                    </h2>
+                                    <div class="product__description">
+                                        Предназначены для теплоснабжения жилых, общественных и промышленных объектов.
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                         alt=""
+                                    >
+                                </div>
+                                <div class="product__color-overlay"></div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Дизель электро<br> станции&nbsp;ДЭС
+                                    </h2>
+                                    <div class="product__description">
+                                        Блок-модуль имеет конструкцию, предназначенную для размещения в нем автономных источников электроснабжения с использованием дизельных генераторов.
                                     </div>
                                     <div class="product__more">
                                         Подробнее
