--- a/src/styles/_product.css
+++ b/src/styles/_product.css
@@ -1,9 +1,9 @@
 .product {
     position: relative;
     display: block;
-    width: 396px;
-    height: 456px;
-    clip-path: path("M395.188 114L198 0L0.680599 114L0.672852 342L198 456L395.25 342L395.188 114Z");
+    width: 372px;
+    height: 428px;
+    clip-path: path("M371.237 107L186 0L0.639358 107L0.63208 321L186 428L371.296 321L371.237 107Z");
 }
     .product__preview {
         position: relative;
@@ -66,18 +66,19 @@
         animation: slide-up 500ms ease;
     }
         .product__heading {
-            font-size: 22px;
-            line-height: 27px;
+            font-size: 30px;
+            line-height: 34px;
         }
 
         .product:hover .product__heading {
-
+            font-size: 20px;
+            line-height: 24px;
         }
 
         .product__description {
             margin-top: 8px;
-            font-size: 20px;
-            line-height: 24px;
+            font-size: 18px;
+            line-height: 22px;
             display: none;
         }
 
@@ -88,10 +89,10 @@
         .product__more {
             margin-left: auto;
             margin-right: auto;
-            margin-top: 8px;
+            margin-top: 16px;
             width: fit-content;
             border: 1px solid currentColor;
-            padding: 5px 22px 3px;
+            padding: 4px 22px;
             font-weight: bold;
             font-size: 16px;
             display: none;
@@ -99,8 +100,122 @@
 
         .product:hover .product__more {
             display: block;
+            transition: background-color var(--transition-hover);
         }
 
         .product__more:hover {
-            background-color: #FFFFFF;
+            background-color: rgb(255 255 255 / 20%);
         }
+
+
+
+@media (1850px <= width) {
+
+    .product {
+        /*position: relative;*/
+        /*display: block;*/
+        width: 396px;
+        height: 456px;
+        clip-path: path("M395.188 114L198 0L0.680599 114L0.672852 342L198 456L395.25 342L395.188 114Z");
+    }
+        .product__preview {
+            /*position: relative;*/
+            /*width: 100%;*/
+            /*height: 100%;*/
+        }
+            .product__image {
+                /*vertical-align: top;*/
+                /*width: 100%;*/
+                /*height: 100%;*/
+                /*object-fit: cover;*/
+            }
+
+            .product__preview::after {
+                /*content: "";*/
+                /*position: absolute;*/
+                /*left: 0;*/
+                /*top: 0;*/
+                /*right: 0;*/
+                /*bottom: 0;*/
+                /*background-image: linear-gradient(rgb(217 217 217 / 20%), rgb(15 51 169 / 91%));*/
+                /*transition: opacity var(--transition-hover);*/
+            }
+
+        .product__color-overlay {
+            /*position: absolute;*/
+            /*left: 0;*/
+            /*top: 0;*/
+            /*right: 0;*/
+            /*bottom: 0;*/
+            /*background-color: #3B64EC;*/
+            /*mix-blend-mode: multiply;*/
+            /*opacity: 0;*/
+            /*visibility: hidden;*/
+            /*transition: opacity var(--transition-hover),*/
+            /*            visibility var(--transition-hover);*/
+        }
+
+        .product:hover .product__color-overlay {
+            /*opacity: 1;*/
+            /*visibility: visible;*/
+        }
+
+        .product__overlay {
+            /*position: absolute;*/
+            /*left: 0;*/
+            /*top: 0;*/
+            /*right: 0;*/
+            /*bottom: 0;*/
+            /*display: flex;*/
+            /*flex-direction: column;*/
+            /*align-items: center;*/
+            /*justify-content: center;*/
+            /*padding: 16px;*/
+            /*color: #FFFFFF;*/
+            /*text-align: center;*/
+        }
+
+        .product:hover .product__overlay {
+            /*animation: slide-up 500ms ease;*/
+        }
+            .product__heading {
+                font-size: 30px;
+                line-height: 37px;
+            }
+
+            .product:hover .product__heading {
+                font-size: 22px;
+                line-height: 27px;
+            }
+
+            .product__description {
+                /*margin-top: 8px;*/
+                font-size: 20px;
+                line-height: 24px;
+                /*display: none;*/
+            }
+
+            .product:hover .product__description {
+                /*display: block;*/
+            }
+
+            .product__more {
+                /*margin-left: auto;*/
+                /*margin-right: auto;*/
+                margin-top: 18px;
+                /*width: fit-content;*/
+                /*border: 1px solid currentColor;*/
+                /*padding: 5px 22px 3px;*/
+                /*font-weight: bold;*/
+                /*font-size: 16px;*/
+                /*display: none;*/
+            }
+
+            .product:hover .product__more {
+                /*display: block;*/
+            }
+
+            .product__more:hover {
+                /*background-color: #FFFFFF;*/
+            }
+}
