--- a/src/styles/_product.css
+++ b/src/styles/_product.css
@@ -219,3 +219,118 @@
                 /*background-color: #FFFFFF;*/
             }
 }
+
+
+
+@media (width < 740px) {
+
+    .product {
+        /*position: relative;*/
+        /*display: block;*/
+        width: 274px;
+        height: 318px;
+        clip-path: path("M274 80L137 0L0 80V238L137 318L274 238V80Z");
+    }
+        .product__preview {
+            /*position: relative;*/
+            /*width: 100%;*/
+            /*height: 100%;*/
+        }
+            .product__image {
+                /*vertical-align: top;*/
+                /*width: 100%;*/
+                /*height: 100%;*/
+                /*object-fit: cover;*/
+            }
+
+            .product__preview::after {
+                /*content: "";*/
+                /*position: absolute;*/
+                /*left: 0;*/
+                /*top: 0;*/
+                /*right: 0;*/
+                /*bottom: 0;*/
+                /*background-image: linear-gradient(rgb(217 217 217 / 20%), rgb(15 51 169 / 91%));*/
+                /*transition: opacity var(--transition-hover);*/
+            }
+
+        .product__color-overlay {
+            /*position: absolute;*/
+            /*left: 0;*/
+            /*top: 0;*/
+            /*right: 0;*/
+            /*bottom: 0;*/
+            /*background-color: #3B64EC;*/
+            /*mix-blend-mode: multiply;*/
+            /*opacity: 0;*/
+            /*visibility: hidden;*/
+            /*transition: opacity var(--transition-hover),*/
+            /*            visibility var(--transition-hover);*/
+        }
+
+        .product:hover .product__color-overlay {
+            /*opacity: 1;*/
+            /*visibility: visible;*/
+        }
+
+        .product__overlay {
+            /*position: absolute;*/
+            /*left: 0;*/
+            /*top: 0;*/
+            /*right: 0;*/
+            /*bottom: 0;*/
+            /*display: flex;*/
+            /*flex-direction: column;*/
+            /*align-items: center;*/
+            /*justify-content: center;*/
+            /*padding: 16px;*/
+            /*color: #FFFFFF;*/
+            /*text-align: center;*/
+        }
+
+        .product:hover .product__overlay {
+            /*animation: slide-up 500ms ease;*/
+        }
+            .product__heading {
+                /*font-size: 30px;*/
+                /*line-height: 34px;*/
+            }
+
+            .product:hover .product__heading {
+                /*font-size: 20px;*/
+                /*line-height: 24px;*/
+            }
+
+            .product__description {
+                /*margin-top: 8px;*/
+                /*font-size: 18px;*/
+                /*line-height: 22px;*/
+                /*display: none;*/
+            }
+
+            .product:hover .product__description {
+                /*display: block;*/
+            }
+
+            .product__more {
+                /*margin-left: auto;*/
+                /*margin-right: auto;*/
+                /*margin-top: 16px;*/
+                /*width: fit-content;*/
+                /*border: 1px solid currentColor;*/
+                /*padding: 4px 22px;*/
+                /*font-weight: bold;*/
+                /*font-size: 16px;*/
+                /*display: none;*/
+            }
+
+            .product:hover .product__more {
+                /*display: block;*/
+                /*transition: background-color var(--transition-hover);*/
+            }
+
+            .product__more:hover {
+                /*background-color: rgb(255 255 255 / 20%);*/
+            }
+}
+
