--- a/src/styles/_solutions.css
+++ b/src/styles/_solutions.css
@@ -101,7 +101,7 @@
     }
         .solutions__item {
             display: flex;
-            margin-top: -74px !important;
+            margin-top: -74px;
         }
 
         .solutions__item:nth-child(5n+1),
@@ -197,13 +197,6 @@
             /*background-repeat: no-repeat;*/
             /*background-position: center top;*/
         }
-
-        /*@media (min-resolution: 1.5dppx) {*/
-        /*    .solutions__head {*/
-        /*        background-image: url("../images/solutions/solutions-desktop-background@2x.jpg");*/
-        /*    }*/
-        /*}*/
-
             .solutions__features {
                 /*display: grid;*/
                 /*grid-template-columns: repeat(2, minmax(0, 1fr));*/
@@ -355,6 +348,146 @@
                 }
 }
 
+
+
+@media (width < 740px) {
+
+    .solutions {
+        /*padding-top: 3px;*/
+    }
+        .solutions__head {
+            padding-top: 416px;
+            padding-bottom: 118px;
+            /*position: relative;*/
+            background-color: #C0E5FF;
+            background-image: url("../images/solutions/solutions-smartphone@1x.jpg");
+            background-size: 456px 460px;
+            /*background-repeat: no-repeat;*/
+            /*background-position: center top;*/
+        }
+
+        @media (min-resolution: 1.5dppx) {
+            .solutions__head {
+                background-image: url("../images/solutions/solutions-smartphone@2x.jpg");
+            }
+        }
+
+            .solutions__features {
+                display: none;
+            }
+
+            .solutions__head::after {
+                display: none;
+            }
+
+        .solutions__intro {
+            margin-top: 0;
+            display: block;
+            /*flex-direction: column;*/
+        }
+            .solutions__heading {
+                margin-top: 0;
+                /*margin-bottom: 0;*/
+                /*max-width: 600px;*/
+                /*margin-left: auto;*/
+                /*margin-right: auto;*/
+                /*font-weight: 600;*/
+                font-size: 30px;
+                line-height: 37px;
+                color: #0D25FF;
+                /*text-align: center;*/
+            }
+
+            .solutions__description {
+                /*order: -1;*/
+                /*max-width: 890px;*/
+                /*margin: 0 auto;*/
+                margin-top: 40px;
+                font-size: 17px;
+                line-height: 24px;
+                /*text-align: center;*/
+            }
+                .solutions__heading-line-break {
+
+                }
+
+        .solutions__list {
+            margin-top: 0;
+            display: block;
+            background-color: #0D25FF;
+            padding: 30px var(--container-padding);
+            background-image: none;
+        }
+            .solutions__item {
+                width: fit-content;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 0;
+            }
+
+
+            .solutions__item:nth-child(1),
+            .solutions__item:nth-child(2),
+            .solutions__item:nth-child(3) {
+                position: static;
+            }
+
+        .solutions__sub-section {
+            margin-top: 70px;
+        }
+            .solutions__sub-head {
+                display: block;
+                /*flex-direction: column;*/
+            }
+                .solutions__sub-heading {
+                    margin-top: 0;
+                    /*margin-bottom: 0;*/
+                    /*max-width: 700px;*/
+                    /*margin-left: auto;*/
+                    /*margin-right: auto;*/
+                    /*font-weight: 600;*/
+                    font-size: 30px;
+                    line-height: 37px;
+                    color: #0D25FF;
+                    /*text-align: center;*/
+                }
+
+                .solutions__sub-description {
+                    /*order: -1;*/
+                    /*max-width: 880px;*/
+                    /*margin-left: auto;*/
+                    /*margin-right: auto;*/
+                    margin-top: 27px;
+                    font-size: 17px;
+                    line-height: 24px;
+                    /*text-align: center;*/
+                }
+
+            .solutions__sub-list {
+                margin-top: 42px;
+                padding-top: 0;
+                padding-bottom: 47px;
+                display: block;
+                background-image: none;
+                /*grid-template-columns: repeat(2, 372px);*/
+                /*justify-content: center;*/
+                /*gap: 41px;*/
+                /*background-image: url("../vectors/solutions-additional-skeleton.svg"), linear-gradient(#FFFFFF, #FFFFFF 20%, #0099FF);*/
+                /*background-size: 1488px 921px, auto auto;*/
+                /*background-repeat: no-repeat;*/
+                /*background-position: center top;*/
+            }
+                .solutions__sub-item {
+                    width: fit-content;
+                    margin-left: auto;
+                    margin-right: auto;
+                    margin-top: 38px;
+                }
+
+                .solutions__sub-item:first-child {
+                    margin-top: 0;
+                }
+}
 
 
 
