--- a/src/styles/_solutions.css
+++ b/src/styles/_solutions.css
@@ -412,16 +412,45 @@
                 }
 
         .solutions__list {
+            position: relative;
             margin-top: 0;
             display: block;
             background-color: #0D25FF;
             padding: 30px var(--container-padding);
             background-image: none;
         }
+            .solutions__list::before,
+            .solutions__list::after {
+                content: "";
+                display: block;
+                position: absolute;
+                left: 0;
+                right: 0;
+                margin-left: auto;
+                margin-right: auto;
+                width: 0;
+                border-left: 94px solid transparent;
+                border-right: 94px solid transparent;
+            }
+
+            .solutions__list::before {
+                bottom: 100%;
+                border-bottom: 54px solid #0D25FF;
+            }
+
+            .solutions__list::after {
+                top: 100%;
+                border-top: 54px solid #0D25FF;
+            }
+
             .solutions__item {
                 width: fit-content;
                 margin-left: auto;
                 margin-right: auto;
+                margin-top: 23px;
+            }
+
+            .solutions__item:first-child {
                 margin-top: 0;
             }
 
