--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -45,5 +45,7 @@
 @import url("_solutions.css");
 @import url("_product.css");
 @import url("_slide-up.css");
+@import url("_manufacturing.css");
+@import url("_tiles.css");
 
 
