--- a/src/layouts/manufacturing.html
+++ b/src/layouts/manufacturing.html
@@ -72,161 +72,84 @@
                                 Производство
                             </h2>
                             <div class="manufacturing__list">
-                                <div class="tiles">
-                                    <a class="tiles__item" href="#">
+                                <!-- Повторять для каждых 23 фото: -->
+                                <div class="tiles-23">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
-                                        <div style="height: 100%; background: purple;"></div>
-                                    </a>
-                                    <a class="tiles__item" href="#">
+                                    <a class="tiles-23__item" href="#">
                                         <div style="height: 100%; background: purple;"></div>
                                     </a>
                                 </div>
