--- a/src/styles/_manufacturing.css
+++ b/src/styles/_manufacturing.css
@@ -38,4 +38,6 @@
 
         .manufacturing__list {
             margin-top: 21px;
+            display: flex;
+            flex-direction: column;
         }
